--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
   <link rel="stylesheet" href="css/generic/reset.css">
   <link rel="stylesheet" href="css/components/memory-card.css">
+  <link rel="stylesheet" href="css/components/memory-card-turned.css">
 
 </head>
 <body>
