Fim da aula [022]

--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
 
   <link rel="stylesheet" href="css/generic/reset.css">
   <link rel="stylesheet" href="css/components/memory-card.css">
-  <link rel="stylesheet" href="css/components/memory-card-turned.css">
 
 </head>
 <body>
 
-  <div id="root"></div>
+  <div id="root">
+    <!-- <article class="memory-card -front">
+      <img class="icon" src="img/icon-js.png" alt="Icone Livro da Linguaguem Javascript">
+    </article> -->
+  </div>
 
   <script src="src/index.js"></script>
 </body>
