--- a/index.html
+++ b/index.html
@@ -12,11 +12,7 @@
 </head>
 <body>
 
-  <div id="root">
-    <!-- <article class="memory-card -front">
-      <img class="icon" src="img/icon-js.png" alt="Icone Livro da Linguaguem Javascript">
-    </article> -->
-  </div>
+  <div id="root"></div>
 
   <script src="src/index.js"></script>
 </body>
