--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Memory Game</title>
 
   <link rel="stylesheet" href="css/generic/reset.css">
+  <link rel="stylesheet" href="css/objects/wrap-cards.css">
   <link rel="stylesheet" href="css/components/memory-card.css">
 
 </head>
@@ -14,6 +15,8 @@
 
   <div id="root"></div>
 
-  <script src="src/index.js"></script>
+  <script src="src/objects/wrap-cards.js"></script>
+  <script src="src/components/memory-card/memory-card.js"></script>
+  <script src="src/pages/game/index.js"></script>
 </body>
 </html>
