--- a/index.html
+++ b/index.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Memory Game</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Memory Game</title>
 
-  <link rel="stylesheet" href="css/generic/reset.css">
+    <link rel="stylesheet" href="css/generic/reset.css" />
+  </head>
+  <body>
+    <div id="root"></div>
 
-</head>
-<body>
-
-  <div id="root"></div>
-
-  <script src="src/objects/cards-wrapper/cards-wrapper.js"></script>
-  <script src="src/components/memory-card/index.js"></script>
-  <script src="src/pages/game/index.js"></script>
-</body>
+    <script src="src/global/store.js"></script>
+    <script src="src/objects/cards-wrapper/cards-wrapper.js"></script>
+    <script src="src/components/memory-card/index.js"></script>
+    <script src="src/pages/game/index.js"></script>
+  </body>
 </html>
