--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <body>
     <div id="root"></div>
 
+    <script src="src/objects/icon-collab/index.js"></script>
     <script src="src/components/flat-button/index.js"></script>
     <script src="src/pages/signup/index.js"></script>
   </body>
