--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div id="root"></div>
 
     <script src="src/objects/icon-collab/index.js"></script>
+    <script src="src/components/message/index.js"></script>
     <script src="src/components/flat-button/index.js"></script>
     <script src="src/pages/signup/index.js"></script>
   </body>
